Version 0.32.5 (2022-02-13)
- Make parameter availability more robust
- Add hvac_action to IP Thermostats

Version 0.32.4 (2022-02-12)
- add opening/closing to IPGarage

Version 0.32.3 (2022-02-12)
- Add state to HmIP-MOD-HO
- Use enum value for actions

Version 0.32.2 (2022-02-11)
- Fix HmIP-MOD-HO

Version 0.32.1 (2022-02-11)
- Update to pydevccu 0.1.3
- Priotize detection of devices for custom entities (e.g. HmIP-PCBS2)
- Add HmIPW-FIO6 as CE

Version 0.32.0 (2022-02-10)
- Move create_devices to central
- Move parameter visibility relevant data to own module

Version 0.31.2 (2022-02-08)
- Add HmIP-HDM2 to cover
- Fix unignore filename

Version 0.31.1 (2022-02-07)
- Improve naming
- Add multiplier to entity
- Substitute device_type of HB devices for usage in custom_entities

Version 0.31.0 (2022-02-06)
- Add missing return statement
- Add last_update to every value_cache_entry
- Rename init_entity_value to load_entity_value
- move (un)ignore methods to device
- Add support for unignore file
- Make PROCESS a binary_sensor
- Add DIRECTION & ACTIVITY_STATE to cover (is_opening, is_closing)

Version 0.30.1 (2022-02-04)
- Start hub earlier

Version 0.30.0 (2022-02-03)
- Add paramset to entity
- Add CHANNEL_OPERATION_MODE for HmIP(W)-DRBL4
- Fix DLD lock_state
- Add is_jammed to locks

Version 0.29.2 (2022-02-02)
- Add support for blacklisting a custom entity
- Add HmIP-STH to climate custom entities

Version 0.29.1 (2022-02-02)
- Check if interface callback is alive
- Add class for HomeamaticIP Blinds

Version 0.29.0 (2022-02-01)
- Make device availability dependent on the client
- Fire event about interface availability

Version 0.28.7 (2022-01-30)
- Add additional check to reconnect

Version 0.28.6 (2022-01-30)
- Optimize get_value caching

Version 0.28.5 (2022-01-30)
- Extend device cache to use get_value

Version 0.28.4 (2022-01-30)
- Limit read proxy workers to 1

Version 0.28.3 (2022-01-29)
- Rename RawDevicesCache to DeviceDescriptionCache
